Updated some configs

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,3 +1,8 @@
 set -g mouse on
 set -g default-terminal "screen-256color"
 set -ga terminal-overrides ",xterm-256color*:Tc"
+
+# Start copy mode        <leader> [
+# Start selection        <space>
+# Copy selection         <cr>
+setw -g mode-keys vi
