--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,3 +1,9 @@
+unbind C-b
+set -g prefix C-Space
+
+unbind r
+bind r source-file ~/.tmux.conf \; display "Reloaded ~/.tmux.conf"
+
 set -g mouse on
 set -g default-terminal "screen-256color"
 set -ga terminal-overrides ",xterm-256color*:Tc"
