--- a/.tmux.conf
+++ b/.tmux.conf
@@ -12,3 +12,7 @@ set -ga terminal-overrides ",xterm-256color*:Tc"
 # Start selection        <space>
 # Copy selection         <cr>
 setw -g mode-keys vi
+
+bind '"' split-window -c "#{pane_current_path}"
+bind % split-window -h -c "#{pane_current_path}"
+bind c new-window -c "#{pane_current_path}"
